package shareshop.Manager;

public class SessionManager {
    
}
